--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-...site under construction
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FCNatra.com - Under Construction</title>
+    <style>
+        body {
+            background-color: #282c34;
+            color: #61dafb;
+            font-family: 'Courier New', Courier, monospace;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        h1 {
+            font-size: 3rem;
+        }
+        p {
+            font-size: 1.5rem;
+        }
+        .terminal {
+            background-color: #1e1e1e;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+        }
+    </style>
+</head>
+<body>
+    <div class="terminal">
+        <h1>&lt;/&gt; FCNatra.com</h1>
+        <p>// Site Under Construction</p>
+        <p>// Stay tuned for something awesome!</p>
+    </div>
+</body>
+</html>
