--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -20,7 +20,7 @@
 			justify-content: center;
 			align-items: center;
 			min-height: 100vh;
-			background-image: url("Gemini_Generated_Image_b0fnbjb0fnbjb0fn.jpg"); /* Reemplaza con la URL de tu imagen */
+			background-image: url("https://fcnatra.github.io/edit/main/prueba/Gemini_Generated_Image_b0fnbjb0fnbjb0fn.jpg"); /* Reemplaza con la URL de tu imagen */
             background-size: cover; /* Cubre todo el fondo */
             background-attachment: fixed; /* Fija la imagen al fondo */
             background-repeat: no-repeat; /* Evita que la imagen se repita */
