--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -9,18 +9,18 @@
 
     <style>
         body {
-			background: linear-gradient(to bottom, #000000, #1a1a1a); /* Degradado de negro a gris oscuro */
-			color: #ffffff; /* Color de texto blanco para contraste */
-			font-family: 'Montserrat', sans-serif; /* Fuente de letra para el texto */
-			margin: 0; /* Elimina los márgenes predeterminados del cuerpo */
-			display: flex; /* Habilita el diseño flexible */
-			flex-direction: column; /* Alinea los elementos verticalmente */
-			min-height: 100vh; /* Asegura que el cuerpo ocupe al menos el 100% de la altura de la ventana */
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			min-height: 100vh;
-			background-image: url("https://fcnatra.github.io/edit/main/prueba/Gemini_Generated_Image_b0fnbjb0fnbjb0fn.jpg"); /* Reemplaza con la URL de tu imagen */
+            background: linear-gradient(to bottom, #000000, #1a1a1a); /* Degradado de negro a gris oscuro */
+            color: #ffffff; /* Color de texto blanco para contraste */
+            font-family: 'Montserrat', sans-serif; /* Fuente de letra para el texto */
+            margin: 0; /* Elimina los márgenes predeterminados del cuerpo */
+            display: flex; /* Habilita el diseño flexible */
+            flex-direction: column; /* Alinea los elementos verticalmente */
+            min-height: 100vh; /* Asegura que el cuerpo ocupe al menos el 100% de la altura de la ventana */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-image: url("https://fcnatra.github.io/edit/main/prueba/Gemini_Generated_Image_b0fnbjb0fnbjb0fn.jpg"); /* Reemplaza con la URL de tu imagen */
             background-size: cover; /* Cubre todo el fondo */
             background-attachment: fixed; /* Fija la imagen al fondo */
             background-repeat: no-repeat; /* Evita que la imagen se repita */
@@ -95,9 +95,9 @@
 	</div>
 
     <main>
-		<div style="display: flex; flex-direction: column; align-items: center;">
-			<!-- <h2>Bienvenido a la página web de ACMusic Serantes</h2> -->
-			<p>Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más.</p>
+            <div style="display: flex; flex-direction: column; align-items: center;">
+                        <!-- <h2>Bienvenido a la página web de ACMusic Serantes</h2> -->
+			<p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más.</p>
 			<div class="frame-container">
 			  <iframe src="https://www.instagram.com/acmusicserantes"></iframe>
 			</div>
@@ -105,7 +105,7 @@
 			<div class="frame-container">
 			  <iframe src="https://www.instagram.com/bilongolt"></iframe>
 			</div>
-		</div>
+            </div>
     </main>
 
     <footer>
