--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -97,7 +97,7 @@
     <main>
             <div style="display: flex; flex-direction: column; align-items: center;">
                         <!-- <h2>Bienvenido a la página web de ACMusic Serantes</h2> -->
-			<p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más.</p>
+			<p>Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más.</p>
 			<div class="frame-container">
 			  <iframe src="https://www.instagram.com/acmusicserantes"></iframe>
 			</div>
