--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -20,7 +20,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-image: url("https://fcnatra.github.io/edit/main/prueba/Gemini_Generated_Image_b0fnbjb0fnbjb0fn.jpg"); /* Reemplaza con la URL de tu imagen */
+            background-image: url("https://fcnatra.github.io/prueba/Gemini_Generated_Image_b0fnbjb0fnbjb0fn.jpg"); /* Reemplaza con la URL de tu imagen */
             background-size: cover; /* Cubre todo el fondo */
             background-attachment: fixed; /* Fija la imagen al fondo */
             background-repeat: no-repeat; /* Evita que la imagen se repita */
@@ -64,16 +64,20 @@
             text-align: center; /* Centra el texto del pie de página */
         }
 		
-		.frame-container {
-			width: 80%;
-			margin-bottom: 20px; /* Espacio entre los frames */
-		}
+	.frame-container {
+		width: 80%;
+		margin-bottom: 20px; /* Espacio entre los frames */
+	}
 
-		iframe {
-			width: 100%;
-			height: 300px; /* Ajusta la altura según tus necesidades */
-			border: none; /* Opcional: Elimina el borde del frame */
-		}
+	iframe {
+		width: 100%;
+		height: 300px; /* Ajusta la altura según tus necesidades */
+		border: none; /* Opcional: Elimina el borde del frame */
+	}
+
+	.hidden {
+	    display: none;
+	}
     </style>
     <title>ACMusicSerantes</title>
 </head>
@@ -83,7 +87,7 @@
         <h1>Asociación Cultural ACMusic Serantes</h1>
     </header>
 
-    <div id="menu" style="display: none;">
+    <div id="menu" class="hidden">
 	<nav>
         <ul>
             <li><a href="#">Inicio</a></li>
@@ -95,17 +99,14 @@
 	</div>
 
     <main>
-            <div style="display: flex; flex-direction: column; align-items: center;">
-                        <!-- <h2>Bienvenido a la página web de ACMusic Serantes</h2> -->
-			<p>Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más.</p>
-			<div class="frame-container">
-			  <iframe src="https://www.instagram.com/acmusicserantes"></iframe>
-			</div>
+	<p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más.</p>
+	<div class="frame-container">
+	  <iframe src="https://www.instagram.com/acmusicserantes"></iframe>
+	</div>
 
-			<div class="frame-container">
-			  <iframe src="https://www.instagram.com/bilongolt"></iframe>
-			</div>
-            </div>
+	<div class="frame-container">
+	  <iframe src="https://www.instagram.com/bilongolt"></iframe>
+	</div>
     </main>
 
     <footer>
