--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -98,14 +98,14 @@
 	</div>
 
     <main>
-	<!--<p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más.</p>
+	<p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más.</p>
 	<div class="frame-container">
 	  <iframe src="https://www.instagram.com/acmusicserantes"></iframe>
 	</div>
 
 	<div class="frame-container">
 	  <iframe src="https://www.instagram.com/bilongolt"></iframe>
-	</div>-->
+	</div>
     </main>
 
     <footer>
