Update prueba.html para poner imagen de cabecera

--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <header>
-        <a href="https://m.facebook.com/acmusicserantes" target="_blank"> <img id="header-image" src="https://m.facebook.com/photo.php?fbid=548234810664726" alt="ACMusic Serantes"> </a>
+        <a href="https://www.facebook.com/acmusicserantes" target="_blank"> <img id="header-image" src=".\cabecera.png" alt="ACMusic Serantes"> </a>
 	<h1>Asociación Cultural ACMusic Serantes</h1>
     </header>
 
@@ -113,7 +113,8 @@
 	</div>
 
     <main>
-	<p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más.</p>
+	<p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos,
+		próximos conciertos y mucho más: <a href="https://www.facebook.com/acmusicserantes">facebook.com/acmusicserantes</a></p>
 	<div class="frame-container">
 	  <iframe src="https://www.instagram.com/acmusicserantes"></iframe>
 	</div>
