--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -91,6 +91,23 @@
 
         #header-image:hover {
             transform: scale(1.05); /* Slightly enlarge on hover */
+		
+	#other-images {
+            width: 90%; /* Adjust as needed */
+            max-width: 800px; /* Optional: Set a maximum width */
+            display: block; /* Prevents image from creating extra space */
+            margin: 0 auto; /* Centers the image */
+            border-radius: 10px; /* Rounded corners */
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); /* Blur effect */
+            transition: transform 0.3s ease; /* Smooth hover effect */
+        }
+		
+	#link {
+	  background-color: #a7d1ab;
+	  padding: 5px 10px;
+	  border-radius: 5px;
+	}
+
         }
     </style>
     <title>ACMusicSerantes</title>
@@ -115,13 +132,16 @@
     <main>
 	<p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos,
 		próximos conciertos y mucho más: <a href="https://www.facebook.com/acmusicserantes">facebook.com/acmusicserantes</a></p>
-	<div class="frame-container">
-	  <iframe src="https://www.instagram.com/acmusicserantes"></iframe>
-	</div>
-
-	<div class="frame-container">
-	  <iframe src="https://www.instagram.com/bilongolt"></iframe>
-	</div>
+		
+	</br></br>
+	<a href="https://www.facebook.com/acmusicserantes" target="_blank">
+		<img id="other-images" src=".\grupo1.png" alt="ACMusic Serantes">
+	</a>
+	
+	</br></br></br>
+	<a href="https://www.facebook.com/acmusicserantes" target="_blank">
+		<img id="other-images" src=".\grupo1.png" alt="ACMusic Serantes">
+	</a>
     </main>
 
     <footer>
