Update prueba.html to format FB link

--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -131,7 +131,7 @@
 
     <main>
 	<p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos,
-		próximos conciertos y mucho más: <a href="https://www.facebook.com/acmusicserantes">facebook.com/acmusicserantes</a></p>
+		próximos conciertos y mucho más: <a id="link" href="https://www.facebook.com/acmusicserantes">facebook.com/acmusicserantes</a></p>
 		
 	</br></br>
 	<a href="https://www.facebook.com/acmusicserantes" target="_blank">
