--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -164,7 +164,7 @@
 
     <main>
         <p style="text-align: center;">Aquí encontrarás información sobre nuestra asociación, grupos,
-            próximos conciertos y mucho más: <a id="link"
+            próximos conciertos y mucho más: </br><a id="link"
                 href="https://www.facebook.com/acmusicserantes">facebook.com/acmusicserantes</a></p>
 
         </br></br>
