avoid Cache in browsers

--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -166,7 +166,9 @@
             </ul>
         </nav>
     </div>
-
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <main>
         <p style="text-align: center;">
             Aquí encontrarás información sobre nuestra asociación, grupos, próximos conciertos y mucho más: </br></br>
