AC muscic - Actualizar imágenes para que se vean bien

--- a/prueba/prueba.html
+++ b/prueba/prueba.html
@@ -39,7 +39,8 @@
             max-width: 800px;
             display: block;
             margin: 0 auto;
-            border-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
             transition: transform 0.3s ease;
         }
@@ -150,9 +151,10 @@
 </head>
 
 <body>
-    <header>
-        <a href="https://www.facebook.com/acmusicserantes" target="_blank"> <img id="header-image" src=".\cabecera.png"
-            style="max-width: 500px; width: auto;" alt="ACMusic Serantes"> </a>
+    <header style="padding-top: 0;">
+        <a href="https://www.facebook.com/acmusicserantes" target="_blank">
+            <img id="header-image" src=".\cabecera.png" style="max-width: 500px; width: 100%; margin-top: 0;" alt="ACMusic Serantes">
+        </a>
         <h1>Asociación Cultural ACMusic Serantes</h1>
     </header>
 
@@ -177,12 +179,12 @@
 
         </br></br>
         <a href="https://www.facebook.com/acmusicserantes" target="_blank">
-            <img id="other-images" src="./grupo1.png" style="max-width: 500px; width: auto;" alt="ACMusic Serantes">
+            <img id="other-images" src="./grupo1.png" style="max-width: 500px; width: 100%;" alt="ACMusic Serantes">
         </a>
 
         </br></br>
         <a href="http://www.bilongolt.com" target="_blank">
-            <img id="other-images" src="./grupo2.png" style="max-width: 500px; width: auto;" alt="Bilongo LT">
+            <img id="other-images" src="./grupo2.png" style="max-width: 500px; width: 100%;" alt="Bilongo LT">
         </a>
     </main>
 
