--- a/prueba/index.html
+++ b/prueba/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Asociación Cultural de Músicos</title>
-    <link rel="stylesheet" href="css/styles.css">ç
+    <link rel="stylesheet" href="css/styles.css">
     
     <!-- Preconexión a fuentes de Google para usar la fuente Monserrat-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
