--- a/prueba/index.html
+++ b/prueba/index.html
@@ -21,8 +21,11 @@
             <img src="https://fcnatra.github.io/acmusicserantes/cabecera.png" alt="Logo de la Asociación" id="header-logo">
             <h1>Asociación Cultural Music Serantes</h1>
         </div>
-        <img src="https://fcnatra.github.io/acmusicserantes/FotoIntegrantes.png" alt="Foto de la Asociación" id="landscape-photo">
     </header>
+    <!-- Imagen de la asociación -->
+    <div id="association-image-container">
+        <img src="https://fcnatra.github.io/acmusicserantes/FotoIntegrantes.png" alt="Foto de la Asociación" id="landscape-photo">
+    </div>
     <main>
         <h2>Panel de Bandas</h2>
         <div id="band-panel" class="band-panel"></div>
