Actualizar el título y subtítulo para reflejar correctamente el nombre de la asociación

--- a/prueba/index.html
+++ b/prueba/index.html
@@ -19,7 +19,7 @@
     <header>
         <div id="header-content">
             <img src="https://fcnatra.github.io/acmusicserantes/cabecera.png" alt="Logo de la Asociación" id="header-logo">
-            <h1>Asociación Cultural Music Serantes</h1>
+            <h1>Asociación Cultural ACMusic Serantes</h1>
         </div>
     </header>
     <!-- Imagen de la asociación -->
@@ -27,7 +27,7 @@
         <img src="https://fcnatra.github.io/acmusicserantes/FotoIntegrantes.png" alt="Foto de la Asociación" id="landscape-photo">
     </div>
     <main>
-        <h2>Panel de Bandas</h2>
+        <h2>Nuestras bandas</h2>
         <div id="band-panel" class="band-panel"></div>
     </main>
     <script src="js/bands.js"></script>
